[tool.poetry]
name = "mipro"
version = "0.1.0"
description = ""
authors = ["pizzacat83 <17941141+pizzacat83@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.1"
numpy = "^1.18.4"
pandas = "^1.0.4"
msparser = "^1.4"
jupyterlab = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
